--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <!--<script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
-        <script language="javascript" src="libraries/p5.dom.js"></script>
-        <script language="javascript" src="libraries/p5.sound.js"></script>
-        <script language="javascript" type="text/javascript" src="sketch.js"></script>
-        <script language="javascript" type="text/javascript" src="player.js"></script>
-        <script language="javascript" type="text/javascript" src="Pipe.js"></script>-->
-        <script language="javascript" type="text/javascript" src="main.js"></script>
+        <meta charset="utf-8" />
     </head>
+    
     <body>
+        <canvas style = "border:solid;" id = "paeng" width="720" height="800"></canvas>
+        <script src="main.js"></script>
     </body>
 </html>
